resources/css/default.scss
/* ... */
.code-box-title {
  border-bottom: 1px solid #ccc;
  background-color: #e0e0e0;
  padding: 0.5em 0 0.5em 0.5em;
}

pre#xmlmetadata {
  width: 98%;
}

/* ***********************************************************
FOOTER
************************************************************ */
#layout {
  min-height: 100%;
  margin: 0 auto -6rem auto; /*negative margin = footer height + padding-top + padding-bottom*/
}

#bottom, #push {
  height: 6rem;
}

#footer {
  width: 100%;
  background: linear-gradient(141deg, $primaryBackground 0%, $transitionBackground 51%, $secondaryBackground 75%);
  height: 4rem;
  padding: 2rem 0 0;
  text-align: center;
  color: white;

  a, a:visited {
    color: white;
    &:hover, &:focus {
      background-color: white;
      color: black;
      padding: .15rem;
      margin-left: -.15rem;
      margin-top: -.15rem;
      text-decoration: none;
    }
  }
}

.copyrights {
  padding-top: .5rem;
  height: 3.5rem;
  font-size: .8rem;
}

.logo-footer-space {
  position: absolute;
  right: 0;
  top: 50%;
  transform: translate(0, -50%);
}
html[dir="rtl"] .logo-footer-space {
  right: auto;
  left: 0;
}

.logo-footer {
  height: 4rem;
}

/* ***********************************************************
FORMS
************************************************************ */
.text-area {
  margin-top: .5em;
  width: 100%;
  font-size: 0.9em;
  line-height: 1.15;
}

.file-upload input[type="url"][disabled] {
  cursor: pointer;
  color: inherit;
}

input[type="file"] {
  color: black;
}

.center-form {
  display: flex;
  justify-content: center;
}
.login-form-start, .login-form-submit {
  margin-top: 3ex;
}

.v-center-right {
  position: absolute;
  left: 0;
  top: 50%;
  transform: translate(0, -50%);
}

/* PURE */
.pure-button,
.pure-form input.edge,
.pure-form textarea.edge {
  border-radius: 0;
}
.pure-form input[type="checkbox"] {
  margin-right: .8ex;
  vertical-align: baseline;
}

.pure-button {
  margin-left: 1ex;
}

.pure-control-group {
  margin-bottom: 1ex;
}
.pure-form-aligned .pure-controls {
  margin: 0 0 0 11em;
}

.pure-select {
  float: right;
}
html[dir="rtl"] .pure-select {
  float: left;
}

/* ***********************************************************
IMAGES
************************************************************ */
.fa {
  font-family: "Font Awesome 5 Free" !important;
  font-weight: 400;
}

span.fa, i.fa {
  padding: 0 0.5em;
}

.message-box span.fa,
.message-box i.fa {
  padding: 0;
}

/* ***********************************************************
TABLES
************************************************************ */
.pure-table-attributes {
  table-layout: fixed;
  width: 100%;
}

.attrname {
  text-align: right;
}

.attrvalue {
  overflow-wrap: break-word;
}

table.attributes ul {
  padding: inherit;
}

/* ***********************************************************
MEDIA QUERIES
************************************************************ */

@media screen and (max-width: 40em) {
  .pure-form .pure-input-sm-1-1 {
    width: 100%;
  }
}

@media screen and (max-width: 40em) {
  .wrap {
    width: 90%;
  }
  .pure-form-aligned .pure-controls {
    margin: 0.5em 0 0;
    float: left;
  }
  #layout {
    padding-top: 0;
    margin-bottom: -4rem;
  }
  .auth_methods {
    width: 60%;
  }
  #logo {
    font-size: 1.8em;
  }
  #footer {
    height: 2.5rem;
    padding-top: 1.5rem;
    .copyrights {
      height: 1rem;
      padding-top: 0;
    }
  }
}

@media screen and (max-width: 0em), screen and (min-width: 40em) {
  .show-for-small-only {
    display: none !important;
  }
  .input-sm-placeholder {
    display: inline-block;
  }
}

@media screen and (min-width: 40em) {
  .hide-for-large {
    display: none !important;
  }
}

@media screen and (max-width: 40em) {
  .show-for-large {
    display: none !important;
  }
}

/*********
 * Utils *
 *********/

div.preferredidp {
  border: 1px dashed #ccc;
  background: #eee;
  padding: 2px 2em 2px 2em;
}

.clear {
  clear: both;
}

.breathe-top {
  margin-top: 1em;
}

.expandable {
  border: solid 1px #bbb;
  width: 100%;

  .general {
    padding: 1em;
  }
  .content {
    display: none;
    padding: 1em;
  }
  .expander {
    cursor: pointer;
    text-align: center;
    padding: .25em;
    display: block;
    color: black;
    background-color: #f4f4f4;
    border-top: solid 1px #bbb;
    &:focus, &:hover {
      background-color: #555;
      color: white;
    }
    &:after {
      content: "\f078";
      font-family: "Font Awesome 5 Free";
      font-weight: 400;
    }
  }

  &.expanded {
    .content {
      display: block;
      border-left: solid .25em #555;
      border-right: solid .25em #555;
    }
    .expander {
      border-bottom: none;
      border-top: solid 1px #bbb;
      border-left: solid .25em #555;
      border-right: solid .25em #555;
      &:after {
        content: "\f077";
      }
    }
  }
}

.hidden {
  display: none;
}

.idp {
        border: 1px solid silver;
        padding: 1ex;
        margin: 1ex;
}

.idp .idpname {
        font-size: larger;
        font-weight: bold;
}
.idp .idpdesc {
        font-size: small;
        color: gray;
}

